<resources>
    <string name="app_name">Task Manager</string>

    <string name="channel_name">Task Manager Notifications</string>
    <string name="channel_description">Notifications from Task Manager</string>
    <string name="added_to_project_notif_title">You\'ve been added to the project!</string>
    <string name="added_to_project_notif_text">you\'ve been added to project</string>
    <string name="assigned_to_task_notif_title">You\'ve been assigned to the task!</string>
    <string name="assigned_to_task_notif_text">you\'ve been assigned to task:</string>
    <string name="task_deadline_notif_title">You are approaching deadline!</string>
    <string name="task_deadline_notif_description">deadline is coming for </string>
    <string name="deadline_channel_description">Notifications for deadlines</string>
    <string name="deadline_channel_name">Tasks deadlines</string>
    <string name="generate_report_now">Generate report</string>
    <string name="cannot_create_folder">Cannot create directory for the report!</string>
    <string name="cannot_save_report">Cannot save report!</string>
    <string name="report_is_loading">Report is loading...</string>
    <string name="storage_permission_needed">We really need to have this permission!</string>
    <string name="storage_permission_expl">We need this permission to save report on your phone. Nothing dangerous!</string>
    <string name="generation_failed_title">Generating PDF has failed</string>
    <string name="generation_failed_text">Generating project report failed. Error:</string>
    <string name="generation_finished_title">Report is ready!</string>
    <string name="generation_finished_text">Successfully generated project report</string>
    <string name="generation_cancelled_title">Generating report has been cancelled</string>
    <string name="error">Error</string>
    <string name="error_in_generating_report">Error while fetching data. Project has no tasks or check Internet connection</string>
    <string name="ok">OK</string>
    <string name="intro">Hassle free,</string>
    <string name="intro1">flexible and efficient</string>
    <string name="intro2">way to organise task for individual and collaborative work</string>
    <string name="forgot_password">Forgot password? </string>
    <string name="logIn">Login me</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="create_account"><u>Create it!</u></string>
    <string name="reset_password">Reset Password</string>
    <string name="back_to_logIn"><u>Back to Login</u></string>
    <string name="enter_email">Enter your registered email to recover your password</string>
    <string name="sign_up">Sign Up</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="dashboard">Dashboard</string>
    <string name="dashboard_welcome">Welcome John, you have 4 tasks due today.</string>
    <string name="task_status">TASK STATUS</string>
    <string name="completed">COMPLETED</string>
    <string name="ongoing">ONGOING</string>
    <string name="pending">PENDING</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="notification_number">0</string>
    <string name="username">Johnson123</string>
    <string name="user_email">johnson167@gmail.com</string>
    <string name="change_password">Change Password</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="update">Update</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="logOut">Logout</string>
    <string name="logo2">logo2</string>
    <string name="logo_symbol">logo</string>
    <string name="cloud_image">cloud_image</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="enter_name">Enter username</string>
    <string name="upload">Upload</string>
    <string name="upload_text">Upload profile pic</string>
    <string name="back_to_login">Back to Login</string>
    <string name="displayName">Display name</string>
    <string name="email">Email address</string>
    <string name="signUp">Sign Up</string>
    <string name="login">Login me</string>
    <string name="DonNot_have_account">Don\'t have account? Create it!</string>
    <string name="failed_login">Failed to Login.\nPlease check your login info and try again.</string>
    <string name="invalid_mail">Invalid Email.</string>
    <string name="email_required">Email Required.</string>
    <string name="password_required">Password Required</string>
    <string name="password_check_login">Password must be at least 6 characters.</string>
    <string name="check_email">Check your Email</string>
    <string name="create_user">Successfuly created User.</string>
    <string name="failed_create_user">Failed to create User</string>
    <string name="logout">Logout</string>
    <string name="EditProfile">Edit Profile</string>
    <string name="notifications">Notifications</string>

    <string name="email_notFound_reset">A user with that email address could not be found</string>
    <string name="usernameTaken">Username already taken!</string>
    <string name="alertExit">Are you sure you want to exit?</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="password_not_match">Password doesn\'t match!</string>
    <string name="password_updated">Password updated successfully</string>
    <string name="my_tasks">My Tasks</string>
    <string name="add_task">Add Task</string>
    <string name="task_title">Task Title:</string>
    <string name="task_description">Task Description:</string>
    <string name="assigned_to">Assigned To:</string>
    <string name="due_date">Due Date:</string>
    <string name="create_task">Create Task</string>
    <string name="add_project">Add Project</string>
    <string name="project_title">Project Title:</string>
    <string name="project_description">Project Description:</string>
    <string name="project_keywords">Project Keywords:</string>
    <string name="project_type">Project Type:</string>
    <string name="add_members">Add Members:</string>
    <string name="create_project">Create Project</string>
    <string name="personal">Personal</string>
    <string name="group">Group</string>
    <string name="welcome">Welcome</string>
    <string name="due_tasks">you have <u>4 tasks</u> due today</string>
    <string name="tasks_status">TASKS STATUS</string>
    <string name="todo">TODO</string>
    <string name="profile_pic">profile_pic</string>
    <string name="completed_counts">20</string>
    <string name="ongoing_counts">4</string>
    <string name="pending_counts">2</string>
    <string name="recently_accessed_projects">RECENTLY ACCESSED PROJECTS</string>
    <string name="expand_all">Expand All</string>
    <string name="member1">member1</string>
    <string name="view_tasks">VIEW TASKS</string>
    <string name="project_badge">Project Badge</string>
    <string name="member2">member2</string>
    <string name="member3">member3</string>
    <string name="trash">trash</string>
    <string name="last_modified">Last modified:</string>
    <string name="home">Home</string>
    <string name="fav">Fav</string>
    <string name="add">Add</string>
    <string name="projects">Projects</string>
    <string name="tasks">Tasks</string>
    <string name="profileSettings">Profile Settings</string>
    <string name="update_password">Update Password</string>
    <string name="favourite_projects">Favourite Projects</string>
    <string name="all_projects">All Projects</string>
    <string name="sample_description">We’re not just passionate purveyors of coffee, but everything else that goes with a full and rewarding coffeehouse experience. We also offer a selection of premium teas, ﬁne pastries and other delectable treats to please the taste buds.</string>
    <string name="pictures">Pictures</string>
    <string name="files">Files</string>
    <string name="all_tasks">All Tasks</string>
    <string name="upload_picture">Upload Picture</string>
    <string name="today">Today:</string>
    <string name="yesterday">Yesterday:</string>
    <string name="older">Older:</string>
    <string name="upload_file">Upload Files</string>
    <string name="pick_date">Pick Date</string>
    <string name="creating_a_project">Creating a project...</string>
    <string name="creating_a_task">Creating a task...</string>
    <string name="task_title_label">Create backend for the project</string>
    <string name="tasks__status">Task status:</string>
    <string name="task__description">Task Description</string>
    <string name="creation_date">Creation date:</string>s
    <string name="completed_">Completed</string>
    <string name="john_doe">John Doe</string>
    <string name="_22_11_2019">22/11/2019</string>
    <string name="due__date">Due date:</string>
    <string name="uploading_file">Uploading file...</string>
    <string name="pick_picture_source">Choose one option</string>
    <string name="editing_a_task">Editing task...</string>
    <string name="are_you_sure_to_delete">Are you sure, sir?</string>
</resources>
