<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".RegisterActivity">


    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="50dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:background="@mipmap/ic_launcher" />
    
    <EditText
        android:id="@+id/displayName_register_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/displayName"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:id="@+id/email_register_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:id="@+id/password_register_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/signUp_register_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/signUp"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_to_login"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>