<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".LoginActivity">


    <EditText
        android:id="@+id/email_login_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:id="@+id/password_login_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:layout_gravity="center_horizontal"/>


    <TextView
        android:id="@+id/forgotPassword_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/login_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/login"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/create_account_login_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DonNot_have_account"
        android:layout_gravity="center_horizontal"/>


    <ProgressBar
        android:id="@+id/progressbar_login"
        android:visibility="gone"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>