<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".LoginActivity">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_email"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:id="@+id/email_resetPW_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/reset_password_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/reset_password"
        android:layout_gravity="center_horizontal"/>


    <TextView
        android:id="@+id/back_login_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_to_login"/>

    <ProgressBar
        android:id="@+id/progressbar_reset_password"
        android:visibility="gone"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>