<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/parent_padding"
    android:paddingTop="@dimen/parent_top"
    android:paddingRight="@dimen/parent_padding"
    tools:context=".CreateTaskActivity">

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logo1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/logo_symbol"
            android:paddingTop="30dp"
            app:srcCompat="@drawable/ic_logo" />

        <ImageView
            android:id="@+id/logo2"
            android:layout_width="226dp"
            android:layout_height="81dp"
            android:contentDescription="@string/logo2"
            android:paddingStart="@dimen/parent_top"
            android:paddingEnd="@dimen/parent_padding"
            app:srcCompat="@drawable/ic_logo_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/darkGrey"
            android:text="@string/add_task" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/lightGrey"
            android:text="@string/task_title" />

        <EditText
            android:id="@+id/task_title"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/field_top"
            android:layout_marginBottom="@dimen/field_top"
            android:autofillHints=""
            android:background="@drawable/edit_text"
            android:inputType="text"
            android:paddingLeft="@dimen/text_padding"
            android:paddingRight="@dimen/text_padding"
            android:textSize="@dimen/font_size_medium" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/task_description"
            android:textColor="@color/lightGrey" />

        <EditText
            android:id="@+id/task_description"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="@dimen/field_top"
            android:layout_marginBottom="@dimen/field_top"
            android:autofillHints=""
            android:background="@drawable/edit_text"
            android:inputType="textMultiLine|text"
            android:paddingLeft="@dimen/text_padding"
            android:paddingRight="@dimen/text_padding"
            android:textSize="@dimen/font_size_medium" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/assigned_to"
            android:textColor="@color/lightGrey" />

        <EditText
            android:id="@+id/assigned_to"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/field_top"
            android:layout_marginBottom="@dimen/field_top"
            android:autofillHints=""
            android:background="@drawable/edit_text"
            android:inputType="text"
            android:paddingLeft="@dimen/text_padding"
            android:paddingRight="@dimen/text_padding"
            android:textSize="@dimen/font_size_medium" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/due_date"
            android:textColor="@color/lightGrey" />

        <EditText
            android:id="@+id/due_date"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/field_top"
            android:layout_marginBottom="@dimen/field_top"
            android:autofillHints=""
            android:background="@drawable/edit_text"
            android:inputType="date"
            android:paddingLeft="@dimen/text_padding"
            android:paddingRight="@dimen/text_padding"
            android:textSize="@dimen/font_size_medium" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/task_status"
            android:textColor="@color/lightGrey" />

        <TextView
            android:id="@+id/task_status"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/field_top"
            android:layout_marginBottom="@dimen/field_top"
            android:background="@drawable/edit_text"
            android:clickable="true"
            android:paddingLeft="@dimen/text_padding"
            android:paddingRight="@dimen/text_padding"
            android:textSize="@dimen/font_size_medium" />

        <Button
            android:id="@+id/create_task"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="@dimen/field_top"
            android:background="@drawable/button_background"
            android:text="@string/create_task"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_medium"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>